fix: update tree-expando color to black for better visibility

--- a/src/app/khiops-treeview/khiops-treeview.scss
+++ b/src/app/khiops-treeview/khiops-treeview.scss
@@ -25,6 +25,7 @@
 
 .tree-leaf .tree-expando {
   background: rgba(200, 200, 200, 0.4);
+  color: black;
   border-radius: 2px;
   cursor: pointer;
   float: left;
